# blog-src

./: .gitmodules  README.md  dune-project  site_config.json
dune.lock/: lock.dune  logs.0.10.0.pkg  posixat.v0.17.0.pkg  ppx_js_style.v0.17.1.pkg  ppx_yojson_conv.v0.17.1.pkg  ppx_yojson_conv_lib.v0.17.0.pkg  shexp.v0.17.0.pkg
posts/: dune  dune.inc
scripts/: build.sh  index.sh
site/: dune  dune.inc
site/posts/: dune  dune.inc
site/static/: custom.css
site/tag/: dune.inc
src/: 2020-06-29-optin-state.md  2020-07-25-ldap-client-with-nixos.md  2020-08-07-jepsen-nixos-containers.md  2021-06-19-bootstrapping-nix-channels-in-nixos.md  2024-11-09-static-site-generation-in-dune.md  2025-02-02-calling-ocaml-from-c-in-dune.md  2025-02-02-calling-ocaml-from-c.md
templates/: ga.html  index.html  post.html
tools/src/: dune  import.ml  json.ml  json.mli  lang.ml  lang.mli  markdown.ml  markdown.mli  metadata.ml  metadata.mli  param.ml  path_and_slug.ml  path_and_slug.mli  post.ml  post.mli  syndication.ml  syndication.mli  tools_lib.ml  yojson_date.ml  yojson_date.mli
