(include dune.inc)

(rule
 (deps
  ../scripts/index.sh
  (source_tree ../src)
  ../templates/index.html)
 (action
  (with-stdout-to
   index.html
   (run ../scripts/index.sh))))

(rule
 (deps
  (source_tree ../src))
 (action
  (with-stdout-to
   dune.inc.gen
   (run ../gen/gen.exe))))

(rule
 (alias default)
 (deps
  (source_tree ./static))
 (action
  (diff dune.inc dune.inc.gen)))
