(include dune.inc)

(rule
 (deps (universe))
 (action
  (with-stdout-to
   git-revision
   (run git log -1 --format=%h))))

(rule
 (deps
  ../scripts/index.sh
  (source_tree ../src)
  ../templates/index.html
  git-revision)
 (action
  (with-stdout-to
   index.html
   (run ../scripts/index.sh))))

(rule
 (deps
  (source_tree ../src))
 (action
  (with-stdout-to
   dune.inc.gen
   (run ../gen/gen.exe))))

(rule
 (alias default)
 (deps
  (source_tree ./static))
 (action
  (diff dune.inc dune.inc.gen)))
