(rule
 (deps (universe))
 (action
  (with-stdout-to
   git-revision
   (run git log -1 --format=%h))))

(rule
 (deps
  ../scripts/index.sh
  (source_tree ../src)
  (glob_files ../templates/*.html)
  git-revision)
 (action
  (with-stdout-to
   index.html
   (run ../scripts/index.sh "%{read-lines:git-revision}"))))

(rule
 (deps ../site_config.json git-revision)
 (action
  (with-stdout-to
   site_config.json
   (run
    sed
    -e
    "s/GIT_REVISION/%{read-lines:git-revision}/"
    ../site_config.json))))

(rule
 (targets rss.xml atom.xml)
 (deps
  ../tools/bin/tools.exe
  (source_tree ../src)
  site_config.json)
 (action
  (run
   ../tools/bin/tools.exe
   syndication-feeds
   ../src
   ./
   -site-config
   site_config.json)))
