(include dune.inc)

(rule
 (deps
  (source_tree ../../src))
 (action
  (with-stdout-to
   dune.inc.gen
   (run
    ../../tools/bin/tools.exe
    print-dune-rules
    ../../src
    -build-script
    ../../scripts/build.sh
    -templates-dir
    ../../templates
    -git-revision-file
    ../git-revision))))

(rule
 (alias default)
 (deps
  (source_tree ../static))
 (action
  (diff dune.inc dune.inc.gen)))
